--- a/code-snapshots/06-cmp-deep-dive/13-viewchild/src/app/dashboard/tickets/new-ticket/new-ticket.component.html
+++ b/code-snapshots/06-cmp-deep-dive/13-viewchild/src/app/dashboard/tickets/new-ticket/new-ticket.component.html
@@ -9,7 +9,7 @@
     <textarea name="request" id="request" rows="3" #textInput></textarea>
   </app-control>
   <p>
-    <button appButton #button="myButton">
+    <button appButton>
       Submit
       <span ngProjectAs="icon">⌲</span>
     </button>
