--- a/code-snapshots/06-cmp-deep-dive/18-two-way-binding-repetition/src/app/dashboard/tickets/new-ticket/new-ticket.component.html
+++ b/code-snapshots/06-cmp-deep-dive/18-two-way-binding-repetition/src/app/dashboard/tickets/new-ticket/new-ticket.component.html
@@ -17,7 +17,7 @@
     ></textarea>
   </app-control>
   <p>
-    <button appButton #button="myButton">
+    <button appButton>
       Submit
       <span ngProjectAs="icon">⌲</span>
     </button>
