--- a/code-snapshots/14-routing/11-sorting-tasks-based-on-query-params/src/app/users/user-tasks/user-tasks.component.css
+++ b/code-snapshots/14-routing/11-sorting-tasks-based-on-query-params/src/app/users/user-tasks/user-tasks.component.css
@@ -2,7 +2,7 @@
   padding: 1rem;
   border-radius: 8px;
   max-height: 60vh;
-  overflow: scroll;
+  overflow: auto;
   background-color: #3a2c54;
 }
 
