--- a/code-snapshots/02-essentials/36-localstorage/src/app/shared/card/card.component.html
+++ b/code-snapshots/02-essentials/36-localstorage/src/app/shared/card/card.component.html
@@ -1,3 +1,7 @@
 <div>
   <ng-content />
 </div>
+
+<!-- ne cdo komponent femi, nese shofim <ng-content />, kuptojme qe ne komponentet prind 
+app-user dhe app-task jemi duke perdorur <app-card> .... me sintaksa html brenda .... </app-card> -->
+ 
