--- a/code-snapshots/02-essentials/36-localstorage/src/app/tasks/new-task/new-task.component.html
+++ b/code-snapshots/02-essentials/36-localstorage/src/app/tasks/new-task/new-task.component.html
@@ -1,10 +1,12 @@
+
+<!-- e mbyllim djalogun nga backdrop - sfond -->
 <div class="backdrop" (click)="onCancel()"></div>
 <dialog open>
   <h2>Add Task</h2>
   <form (ngSubmit)="onSubmit()">
     <p>
       <label for="title">Title</label>
-      <input type="text" id="title" name="title" [(ngModel)]="enteredTitle" />
+      <input type="text" id="title" name="title" (ngModel)="enteredTitle" />
     </p>
 
     <p>
@@ -23,3 +25,4 @@
     </p>
   </form>
 </dialog>
+ 
