just commentaion and test

--- a/code-snapshots/04-essentials-practice/15-migrating-to-modules/src/app/header/header.component.html
+++ b/code-snapshots/04-essentials-practice/15-migrating-to-modules/src/app/header/header.component.html
@@ -1,4 +1,5 @@
 <header>
+  <!-- foton e bashkagjisim ne folder public -->
   <img src="investment-calculator-logo.png" alt="A money bag" />
   <h1>Investment Calculator</h1>
 </header>
