--- a/code-snapshots/04-essentials-practice/15-migrating-to-modules/src/app/investment-results/investment-results.component.html
+++ b/code-snapshots/04-essentials-practice/15-migrating-to-modules/src/app/investment-results/investment-results.component.html
@@ -12,6 +12,7 @@
       </tr>
     </thead>
     <tbody>
+      <!-- qe ky funksjon for te kryhet pa gabime, gjurmojme cdo resht ne baz te cdo viti nga result.year -->
       @for (result of results(); track result.year) {
         <tr>
           <td>{{ result.year }}</td>
@@ -24,3 +25,4 @@
     </tbody>
   </table>
 }
+ 
