--- a/code-snapshots/06-cmp-deep-dive/18-two-way-binding-repetition/src/app/dashboard/dashboard-item/dashboard-item.component.html
+++ b/code-snapshots/06-cmp-deep-dive/18-two-way-binding-repetition/src/app/dashboard/dashboard-item/dashboard-item.component.html
@@ -3,5 +3,6 @@
     <img [src]="image().src" [alt]="image().alt" />
     <h2>{{ title() }}</h2>
   </header>
+  <!-- shtojme ng-content sepse brenda <app-dashboard-item > .... </app-dashboard-item> ne app.component.html permbajme vlera si: <app-server-status />, <app-traffic />,  <app-tickets />  -->
   <ng-content />
 </article>
