--- a/code-snapshots/06-cmp-deep-dive/18-two-way-binding-repetition/src/app/dashboard/tickets/tickets.component.html
+++ b/code-snapshots/06-cmp-deep-dive/18-two-way-binding-repetition/src/app/dashboard/tickets/tickets.component.html
@@ -1,7 +1,7 @@
 <div>
   <ul>
     @for (ticket of tickets; track ticket.id) {
-      <li>
+      <li> <!-- close = output<void>(); eshte nje ouptu void, is cili mer vetem sinjalin e shtypjes se butonit, perte mbyllur ticket qe krijuam -->
         <app-ticket [data]="ticket" (close)="onCloseTicket(ticket.id)" />
       </li>
     } @empty {
@@ -11,5 +11,6 @@
 </div>
 
 <div id="new-ticket">
-  <app-new-ticket (add)="onAdd($event)" />
+  <app-new-ticket (add)="onAdd($event)" /> <!-- marim vlerat input title dhe text, per ti shtuar ne array tickets: Ticket[] = []; -->
 </div>
+   
