--- a/code-snapshots/06-cmp-deep-dive/18-two-way-binding-repetition/src/app/shared/button/button.component.html
+++ b/code-snapshots/06-cmp-deep-dive/18-two-way-binding-repetition/src/app/shared/button/button.component.html
@@ -1,6 +1,10 @@
+<!-- pse kmi dy ng-content ???? -->
+
 <span>
-  <ng-content />
+  <ng-content /> <!-- ng-content eshte per Sumbit dhe Logout -->
 </span>
+
 <span class="icon">
-  <ng-content select="icon" />
+  <ng-content select="icon" /> <!-- ndersa ng-content i dyte eshte per <span ngProjectAs="icon">⌲</span> -->
 </span>
+   
