--- a/code-snapshots/06-cmp-deep-dive/18-two-way-binding-repetition/src/app/shared/control/control.component.html
+++ b/code-snapshots/06-cmp-deep-dive/18-two-way-binding-repetition/src/app/shared/control/control.component.html
@@ -1,2 +1,6 @@
 <label>{{ label() }}</label>
+
+<!-- me app-control ne new-ticket.component.html permban input dhe textarea neve i japim akses qe do permbaj dy feature brenda input dhe textarea
+     nese i fshim nuk na shfaqet azgje. -->
 <ng-content select="input, textarea" />
+  
