--- a/code-snapshots/06-cmp-deep-dive/18-two-way-binding-repetition/src/app/header/header.component.html
+++ b/code-snapshots/06-cmp-deep-dive/18-two-way-binding-repetition/src/app/header/header.component.html
@@ -12,7 +12,7 @@
         <a href="/">Management</a>
       </li>
       <li>
-        <button appButton>
+        <button app-button-in-header>
           Logout
           <span ngProjectAs="icon">→</span>
         </button>
@@ -20,3 +20,4 @@
     </ul>
   </nav>
 </header>
+ 
