--- a/code-snapshots/10-change-detection/08-zoneless/src/app/info-message/info-message.component.html
+++ b/code-snapshots/10-change-detection/08-zoneless/src/app/info-message/info-message.component.html
@@ -1,2 +1,2 @@
-<p (click)="onLog()">This is just an info message!</p>
+<p style="cursor: pointer;" (click)="onLog()">This is just an info message!</p>
 <p class="debug-output">{{ debugOutput }}</p>
